--- a/index.html
+++ b/index.html
@@ -4,12 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bio Teste</title>
-    <link href="style.css" rel="stylesheet">
+    <title>Immersive Biology</title>
+    <link href="/style.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
 </head>
 <body>
-    <h1>Hello World!</h1>
-    <h2>Hello World!</h2>
-    <h3>Hello World!</h3>
+    <div class="title">
+        NOME DO PROJETO
+    </div>
+
+    <div class="circle1"></div>
+    <div class="circle2"></div>
 </body>
 </html>
