--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <section id="clients">
         <div class="headline">Feramentas utilizadas</div>
         <div id="clients-container">
-            <img src="/img/android.png" class="client" alt="" width="25%">
+            <img src="./img/android.png" class="client" alt="" width="25%">
             <img src="/img/visualcode.png" class="client" alt="" width="55%">
             <img src="/img/blender.png" class="client" alt="" width="70%">
             <img src="/img/unity.png" class="client" alt="" width="39%">
