--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
         <div class="headline">Feramentas utilizadas</div>
         <div id="clients-container">
             <img src="./img/android.png" class="client" alt="" width="25%">
-            <img src="/img/visualcode.png" class="client" alt="" width="55%">
-            <img src="/img/blender.png" class="client" alt="" width="70%">
-            <img src="/img/unity.png" class="client" alt="" width="39%">
+            <img src="./img/visualcode.png" class="client" alt="" width="55%">
+            <img src="./img/blender.png" class="client" alt="" width="70%">
+            <img src="./img/unity.png" class="client" alt="" width="39%">
         </div>
     </section>
 
@@ -65,7 +65,7 @@
     <section id="product">
         <div class="headline">Nosso app</div>
         <div id="product-container">
-            <img src="/img/iphone-x.png" alt="" class="iphone-x">
+            <img src="./img/iphone-x.png" alt="" class="iphone-x">
             <div id="items">
                 <div class="item">
                     <i class="fas fa-map-marked fa-2x color-primary"></i>
@@ -95,21 +95,21 @@
         <div class="headline">Sobre a Equipe</div>
         <div id="testimonials-container">
             <div class="testimonial">
-                <img src="/img/person1.JPG" alt="" class="testimonial-image">
+                <img src="./img/person1.JPG" alt="" class="testimonial-image">
                 <div class="testimonial-sub">
                 <span class="feature-title">Valdir Bacelar</span>
                 <p>Estudante da Escola de Ensino Médio Técnico Fundação Matias Machline no curso de Informática, responsável pela Codificação do Software e Codificação do Site.</p>
                 </div>
             </div>
             <div class="testimonial">
-                <img src="/img/interrogacao.png" alt="" class="testimonial-image">
+                <img src="./img/interrogacao.png" alt="" class="testimonial-image">
                 <div class="testimonial-sub">
                 <span class="feature-title">Layandra Calixto</span>
                 <p>Estudante da Escola de Ensino Médio Técnico Fundação Matias Machline no curso de Informática, responsável pelo Desing do Software.</p>
                 </div>
             </div>
             <div class="testimonial">
-                <img src="/img/interrogacao.png" alt="" class="testimonial-image">
+                <img src="./img/interrogacao.png" alt="" class="testimonial-image">
                 <div class="testimonial-sub">
                 <span class="feature-title">Maria Elis</span>
                 <p>Estudante da Escola de Ensino Médio Técnico Fundação Matias Machline no curso de Informática, analista responsável pelo software e funções do app.</p>
@@ -122,12 +122,12 @@
     <section id="gallery">
         <div class="headline">Galeria</div>
         <div id="gallery-container">
-            <img src="/img/image-1.jpeg" alt="" class="gallery-image">
-            <img src="/img/image-2.jpeg" alt="" class="gallery-image">
-            <img src="/img/image-3.jpeg" alt="" class="gallery-image">
-            <img src="/img/image-4.jpeg" alt="" class="gallery-image">
-            <img src="/img/image-5.jpeg" alt="" class="gallery-image">
-            <img src="/img/image-6.jpeg" alt="" class="gallery-image">
+            <img src="./img/image-1.jpeg" alt="" class="gallery-image">
+            <img src="./img/image-2.jpeg" alt="" class="gallery-image">
+            <img src="./img/image-3.jpeg" alt="" class="gallery-image">
+            <img src="./img/image-4.jpeg" alt="" class="gallery-image">
+            <img src="./img/image-5.jpeg" alt="" class="gallery-image">
+            <img src="./img/image-6.jpeg" alt="" class="gallery-image">
         </div>
     </section>
 
@@ -139,11 +139,9 @@
     <!-- Font Awesome -->
     <script src="https://kit.fontawesome.com/f9e19193d6.js" crossorigin="anonymous"></script>
 
-    <!-- jQuery CDN -->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"
         integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 
-    <!-- Our JS file -->
     <script src="js/main.js"></script>
 </body>
 
